Added Registration and basic Permssion handling

--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 {% load static %}
-<html>
+<html lang="en">
   <head>
-      <title>Error 404</title>
+      <title>Signin</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.png' %}">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
-  <body>
-      <header>
-        {% include 'chats/navbar.html' %}
-      </header>
-      <main class="container">
-        <div class="text-center">
-          <h1 class="display-4">The chat {{ room_name }} does not exist!</h1>
-        </div>
-      </main>
+  <body class="container">
+      <main class="row" style="margin-top: 10%;">
+        <section class="col-lg-3"></section>
+        <section class="col-lg-6">
+          {% block page %}
+          {% endblock %}
+        </section>
+        <section class="col-lg-3"></section>
+    </main>
   </body>
 </html>
