--- a/chats/templates/chats/index.html
+++ b/chats/templates/chats/index.html
@@ -1,48 +1,30 @@
-<!DOCTYPE html>
+{% extends 'chats/base.html' %}
 {% load static %}
-<html lang="en">
-  <head>
-      <title>Chats</title>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.png' %}">
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-      <header>
-        {% include 'chats/navbar.html' %}
-      </header>
-      <main class="container">
-        <!-- Error Message if somebody tried to access a chat through url -->
-        {% if messages %}
-          {% for message in messages %}
-            <div{% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>
-              {{ message }}
-            </div>
-          {% endfor %}
-        {% endif %}
-        <br />
-        <div class="alert alert-danger text-center" id="error" style="display:none;">
-        </div>
-        <div class="alert alert-success text-center" id="success" style="display:none;">
-        </div>
-        <!-- AJAX Input -->
-          <div class="text-center">
-            <p class="lead">Create a chat or click on a chat in the list below:<p/>
-          </div>
-          <div class="form-group">
-            {% csrf_token %}
-            <input class="form-control" type="text" id="chat_name" maxlength="30" placeholder="Type in a name to create a chat..." required autofocus size="100" />
-          </div>
-        <hr />
-        <!-- A List of chats -->
-        <ul id="chats">
-        </ul>
-    </main>
-      <script src="{% static 'js/chat.js' %}"></script>
-      <script src="https://momentjs.com/downloads/moment-with-locales.js"></script>
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% block page %}
+  {% if messages %}
+    {% for message in messages %}
+      <div{% if message.tags %} class="alert alert-{{ message.tags }} text-center"{% endif %}>
+        {{ message }}
+      </div>
+    {% endfor %}
+  {% endif %}
+  <div class="alert alert-danger text-center" id="error" style="display:none;">
+  </div>
+  <div class="alert alert-success text-center" id="success" style="display:none;">
+  </div>
+  <!-- AJAX Input -->
+  <div class="form-group">
+    {% csrf_token %}
+    <input class="form-control" type="text" id="chat_name" maxlength="30" placeholder="Type in a name to create a chat..." required autofocus size="100" />
+  </div>
+  <!-- A List of chats -->
+  <div class="text-center">
+    <p class="lead">Select a chat from the list:<p/>
+  </div>
+  <ul id="chats">
+  </ul>
+{% endblock %}
+
+{% block extrascript %}
+  <script src="{% static 'js/chat.js' %}"></script>
+{% endblock %}
