--- a/chats/templates/chats/chat.html
+++ b/chats/templates/chats/chat.html
@@ -1,38 +1,24 @@
-<!DOCTYPE html>
+{% extends 'chats/base.html' %}
 {% load static %}
-<html>
-  <head>
-    <title>Chat - {{ room_name_json }}</title>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <link rel="shortcut icon" type="image/x-icon" href="{% static 'favicon.png' %}">
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-    <header>
-      {% include 'chats/navbar.html' %}
-    </header>
-    <main class="container">
-      <p class="lead">{{ room_name_json }}</p>
-      <div class="form-group">
-        <input class="form-control" id="chat-message-input" type="text" placeholder="Write Something..." required/>
-        {% csrf_token %}
-        <input type="hidden" id="user" value="{{ request.user.id }}" required readonly hidden>
-        <input type="hidden" id="username" value="{{ request.user }}" required readonly hidden>
-      </div>
-      <div class="form-group">
-        <input class="btn btn-outline-dark btn-block" id="chat-message-submit" type="button" value="Send"/>
-      </div>
-      <ul id="messages">
-      </ul>
-    </main>
-    <script type="text/javascript">
-      var roomName = {{ room_name_json }};
-    </script>
-    <script src="{% static 'js/message.js' %}"></script>
-    <script src="https://momentjs.com/downloads/moment-with-locales.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
-</html>
+
+{% block page %}
+  <p class="lead">{{ room_name_json }}</p>
+  <div class="form-group">
+    <input class="form-control" id="chat-message-input" type="text" placeholder="Write Something..." required/>
+    {% csrf_token %}
+    <input type="hidden" id="user" value="{{ request.user.id }}" required readonly hidden>
+    <input type="hidden" id="username" value="{{ request.user }}" required readonly hidden>
+  </div>
+  <div class="form-group">
+    <input class="btn btn-outline-dark btn-block" id="chat-message-submit" type="button" value="Send"/>
+  </div>
+  <ul id="messages">
+  </ul>
+{% endblock %}
+
+{% block extrascript %}
+  <script type="text/javascript">
+    var roomName = {{ room_name_json }};
+  </script>
+  <script src="{% static 'js/message.js' %}"></script>
+{% endblock %}
